--- a/content/blog/2016/11/28/maw-002.rst
+++ b/content/blog/2016/11/28/maw-002.rst
@@ -5,7 +5,7 @@ PrintLots
 #########
 
 :date: 2016-11-28 18:20
-:category: Data Struct and Algo Analysis in C
+:category: Data Struct and Algo Analysis
 :tags: c, singly-linked-list
 
 *******
