--- a/content/blog/2016/12/03/maw-003.rst
+++ b/content/blog/2016/12/03/maw-003.rst
@@ -5,7 +5,7 @@ Reverse Singly Linked List
 ##########################
 
 :date: 2016-12-03 20:34
-:category: Data Struct and Algo Analysis in C
+:category: Data Struct and Algo Analysis
 :tags: singly-linked-list, recursion
 
 *******
