--- a/content/blog/2016/12/03/maw-003.rst
+++ b/content/blog/2016/12/03/maw-003.rst
@@ -5,8 +5,8 @@ Reverse Singly Linked List
 ##########################
 
 :date: 2016-12-03 20:34
-:category: Data Struct and Algo Analysis
-:tags: singly-linked-list, recursion
+:category: Data Struct & Algo
+:tags: singly-linked-list, recursion, maw
 
 *******
 Problem
