--- a/content/blog/2016/11/27/maw-001.rst
+++ b/content/blog/2016/11/27/maw-001.rst
@@ -6,8 +6,8 @@ Generate a Linked List from a given array
 
 
 :date: 2016-11-27 19:38
-:category: Data Struct and Algo Analysis
-:tags: c, singly-linked-list
+:category: Data Struct & Algo
+:tags: c, singly-linked-list, maw
 
 *******
 Perface
